[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "halo2_examples"
path = "src/lib.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
rand_core = { version = "0.6", default-features = false }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }

# Uncomment this line to use a local copy of halo2
halo2_proofs = { path = "../halo-bencher/halo2_proofs"}
# halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git" }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
peak_alloc = "0.1.0"
